--- a/infra/ai.yaml
+++ b/infra/ai.yaml
@@ -1,14 +1,14 @@
 # yaml-language-server: $schema=ai.yaml.json
 
 deployments:
-  - name: gpt-35-turbo
-    model:
-      format: OpenAI
-      name: gpt-35-turbo
-      version: "0613"
-    sku:
-      name: Standard
-      capacity: 20
+  # - name: gpt-4
+  #   model:
+  #     format: OpenAI
+  #     name: gpt-4
+  #     version: "0613"
+  #   sku:
+  #     name: Standard
+  #     capacity: 20
   - name: text-embedding-ada-002
     model:
       format: OpenAI
