fix issue for loading env var from prompty file
when prompty upgrade from 0.1.24 -> 0.1.48
there is breaking change. it seems in 0.1.48,
the syntax for loading env should be:
azure_endpoint: ${env:AZURE_OPENAI_ENDPOINT}
if you use captical case, i.e.
azure_endpoint: ${ENV:AZURE_OPENAI_ENDPOINT}
for env it will fail.

in the fix, change to lower case.

--- a/.github/workflows/evaluations.yaml
+++ b/.github/workflows/evaluations.yaml
@@ -74,12 +74,15 @@ jobs:
         with:
           inlineScript: |
             az account set --subscription ${{env.AZURE_SUBSCRIPTION_ID}}
-
        
       - name: debug env
         run: |
-          echo ${{ env.AZURE_OPENAI_ENDPOINT }}
+          echo "hello world"
+          echo "AZURE_OPENAI_ENDPOINT=${{ vars.AZURE_OPENAI_ENDPOINT }}"
 
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v3
+        
       - name: evaluate
         working-directory: ./src/api
         run: |
