--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -1,16 +1,16 @@
 name: Deploy Contoso Chat
 
-on:
-  workflow_dispatch:
-  push:
-    # Run when commits are pushed to mainline branch (main or master)
-    # Set this to the mainline branch you are using
-    branches:
-      - main
-      - master
-    paths-ignore:
-      - '.github/workflows/evaluations.yaml'
-      - 'README.md'    
+# on:
+#   workflow_dispatch:
+#   push:
+#     # Run when commits are pushed to mainline branch (main or master)
+#     # Set this to the mainline branch you are using
+#     branches:
+#       - main
+#       - master
+#     paths-ignore:
+#       - '.github/workflows/evaluations.yaml'
+#       - 'README.md'    
 
 # GitHub Actions workflow to deploy to Azure using azd
 # To configure required secrets for connecting to Azure, simply run `azd pipeline config`
